--- a/Views/Account/Customers.cshtml
+++ b/Views/Account/Customers.cshtml
@@ -10,7 +10,7 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                Customers
+                <a type="button" class="btn btn-primary" asp-controller="Account" asp-action="ExportCustomers">Export Customers</a>
             </div>
             <!-- /.panel-heading -->
             <div class="panel-body">
