--- a/Views/Account/Products.cshtml
+++ b/Views/Account/Products.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CanamDistributors.Entity.Products>
+﻿@model IEnumerable<CanamDistributors.Models.ProductResponseModel>
 @{
     ViewData["Title"] = "Products";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -10,7 +10,6 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                @* <a type="button" class="btn btn-primary" asp-controller="Account" asp-action="CreateProduct">Create Products</a> *@
                 <a type="button" class="btn btn-primary" asp-controller="Account" asp-action="ExportProducts">Export Products</a>
                 <a type="button" class="btn btn-primary" asp-controller="Account" asp-action="PrintPreview">Print Products</a>
             </div>
@@ -19,7 +18,7 @@
                 <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover productTable" id="dataTables-example">
                         <thead>
-                            <tr
+                            <tr>
                                 <th>Images</th>
                                 <th>Category</th>
                                 <th>Name</th>
@@ -58,7 +57,7 @@
                                     <td>@category.ParentRefName</td>
                                     <td>@category.Name</td>
                                     <td>@category.Name</td>
-                                    <td>@category.Type</td>
+                                    <td>@category.Type</td> 
                                     <td>@Html.Raw(category.Description)</td>
                                     <td>@category.UnitPrice</td>
                                     <td>@category.PurchaseCost</td>
