--- a/Views/Account/Products.cshtml
+++ b/Views/Account/Products.cshtml
@@ -29,6 +29,9 @@
                                 <th>Cost</th>
                                 <th>Qty On Hand</th>
                                 <th>ReOrder Point</th>
+                                <th>Created ON</th>
+                                <th>Status</th>
+                                <th>Action</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -63,6 +66,17 @@
                                     <td>@category.PurchaseCost</td>
                                     <td>@category.QtyOnHand</td>
                                     <td>@category.ReorderPoint</td>
+                                    <td>@category.CreationDate</td>
+                                    <td>
+                                        <label class="switch">
+                                            <input type="checkbox" id="toggleStatus_@category.Id" onchange="handleCheckboxChange(this, '@category.Id',@category.DiscountPrice,'@Html.Raw(category.Images)','@Html.Raw(category.Description)','true')"
+                                            @(category.Active == "true" ? "checked" : "") />
+                                            <span class="slider round"></span>
+                                        </label>
+                                    </td>
+                                    <td>
+                                        <a type="button" class="btn btn-primary" onclick="EditHotDealProduct('@category.Id',@category.DiscountPrice,'@Html.Raw(category.Images)','@Html.Raw(category.Description)','true')">Edit</a>
+                                    </td>
                                 </tr>
                             }
                         </tbody>
